# Gamegine

./: .coverage  .gitignore  README.md  check_rllib_device.py  choreoTest.traj  debug_log.txt  generate_api_docs.py  output.txt  output_nudge.txt  output_nudge_strong.txt  pyproject.toml  reproduce_issue.py  reproduce_output_2.txt  requirements.txt  setup.py  test_log.txt  test_ncim_units.py  test_output.txt  test_output_2.txt  test_output_3.txt  test_output_4.txt
.VSCodeCounter/2024-07-01_04-37-58/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
Gamegine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: conf.py  index.rst  ncim.rst  pathfinding.rst  reference.rst  representation.rst  trajectorylib.rst
docs-site/: README.md  next.config.mjs  package-lock.json  package.json  tsconfig.json
docs-site/app/: globals.css  layout.tsx  page.tsx
docs-site/lib/: layout.shared.tsx
docs/_build/: .buildinfo  genindex.html  index.html  ncim.html  objects.inv  py-modindex.html  reference_index.html  representation.html  search.html  searchindex.js
examples/: basic_game.py  basic_pathfinding.py  crescendo_2024.py  elevator_pid.py  test_pybullet.py  test_pybullet_swerve.py  trajectory_generation.py  units.py  visibility_analysis_demo.py
examples/Rebuilt/: Rebuilt.py  animated_demo.py  cycling_test.py  match_logic.py  render_field.py  scoring.py  (+1 more)
frc_gamegine.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
gamegine/: __init__.py
gamegine/hifi_sim/rust/crates/gamegine_sim_py/: Cargo.toml
gamegine/hifi_sim/rust/crates/gamegine_sim_py/src/: battery.rs  drivetrain.rs  lib.rs  mechanism.rs  motor.rs
swerve_sim/: Cargo.toml
swerve_sim/crates/app/: Cargo.toml
swerve_sim/crates/control/: Cargo.toml
swerve_sim/crates/control/examples/: elevator_pid.rs
swerve_sim/crates/control/src/: lib.rs  pidf.rs
swerve_sim/crates/electrical/: Cargo.toml
swerve_sim/crates/electrical/examples/: battery_step.rs  debug_tank_dynamics.rs  realtime_swerve_drive.rs  realtime_tank_drive.rs
swerve_sim/crates/electrical/src/: lib.rs
swerve_sim/crates/mechanics/: Cargo.toml
swerve_sim/crates/mechanics/examples/: graph_tire_model.rs
swerve_sim/crates/mechanics/src/: lib.rs  link.rs  swerve.rs  tire.rs
swerve_sim/crates/simcore/: Cargo.toml
swerve_sim/crates/swerve_sim_py/: Cargo.toml
swerve_sim/crates/swerve_sim_py/src/: lib.rs
tests/: benchmark_ncim.py  create_mock_pdf.py  test_battery_motor.py  test_conversion_e2e.py  test_hifi_sim.py  test_logic_system.py  test_mapping.py  test_math.py  test_mechanism_sim.py  test_ncim_core.py  test_rebuilt_features.py  test_rebuilt_scoring.py  test_render.py  test_safety_corridor.py  test_simulation_state.py  test_unit.py  test_visibility.py  verify_e2e.py
(+339 files in other folders)
