[package]
name = "control"
version = "0.1.0"
edition = "2024"

[dependencies]
simcore = { path = "../simcore" }
electrical = { path = "../electrical" }
serde = { workspace = true }
rand = { workspace = true }
rand_distr = "0.5.1"
eframe.workspace = true
egui.workspace = true
egui_plot.workspace = true
