[package]
name = "swerve_sim_py"
version = "0.1.0"
edition = "2021"

[lib]
name = "swerve_sim_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
simcore = { path = "../simcore" }
mechanics = { path = "../mechanics" }
electrical = { path = "../electrical" }
control = { path = "../control" }
